--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,7 +1,11 @@
 .header_container {
   width: 100%;
   height: 5vh;
-  border: 1px solid black;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  background-color: transparent;
+  z-index: 1;
+  position: relative;
+  color: aliceblue;
+  margin-left: 2%;
 }
