--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -1,27 +1,28 @@
 .search_container {
   width: 50%;
   height: auto;
-  text-align: right;
+  text-align: center;
   display: inline-grid;
   grid-template-columns: 3fr 1fr;
   align-items: right;
   grid-gap: 1rem;
-  padding: 4%;
+  margin-top: 2%;
 }
 
 .searchbar {
-  width: 100%;
   height: 90%;
   border-radius: 20px;
-  background-color: aliceblue;
+  background-color: #f8faff;
   font-size: 2vw;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .btn_search {
-  font-size: 1em;
+  font-size: 2vw;
   text-align: center;
   cursor: pointer;
-  background: #425ea7;
+  background: #f8faff;
   border-radius: 10px;
   border: none;
   padding: 0;
