--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700;900&display=swap");
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: "Titillium Web", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(196, 211, 224);
 }
 
 code {
