--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -1,6 +1,6 @@
 .banner {
-  width: 100%;
-  height: 110%;
+  width: auto;
+  height: 100%;
   margin-top: -15%;
   display: grid;
   grid-template-rows: 1fr;
