--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(196, 211, 224);
+  overflow-x: hidden;
 }
 
 code {
