--- a/src/components/Movies.module.css
+++ b/src/components/Movies.module.css
@@ -3,7 +3,7 @@
   height: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2%;
+  column-gap: 2%;
 }
 
 @media (max-width: 768px) {
