--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -6,16 +6,19 @@
   grid-template-columns: 2fr 1fr;
   align-items: right;
   grid-gap: 1rem;
-  margin-left: 15%;
+  margin-left: 20%;
 }
 
 .searchbar {
   height: 90%;
+  width: 200%;
   border-radius: 20px;
-  background-color: #f8faff;
+  background-color: transparent;
   font-size: 2vw;
   padding-left: 5px;
   padding-right: 5px;
+  color: yellow;
+  border: 2px solid yellow;
 }
 
 .btn_search {
@@ -24,11 +27,13 @@
   text-align: center;
   cursor: pointer;
   background: #f8faff;
-  border-radius: 10px;
+  border-radius: 20px;
   border: none;
-  padding: 0;
-  cursor: pointer;
-  background-color: rgba(255, 230, 0, 0.541);
+  padding: 5% 10%;
+  background-color: rgb(194, 194, 0);
+  user-select: none;
+  margin-left: 120%;
+  margin-top: 0;
 }
 
 .btn_search:active {
@@ -37,4 +42,13 @@
   border: 2px solid black;
   box-shadow: 0 2px 25px aliceblue;
   background-color: rgb(255, 230, 0);
+}
+
+@media (max-width: 768px) {
+  .btn_search {
+    padding: 15% 20%;
+    font-size: 2.5vw;
+    margin-left: 15%;
+    margin-top: 0;
+  }
 }
