--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -2,18 +2,17 @@
   position: fixed;
   text-align: center;
   z-index: 1;
-  padding-top: 100px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal_body {
-  width: 100%;
+  width: auto;
   background-color: white;
   height: minmax(100px, auto);
   border-radius: 5px;
@@ -29,7 +28,7 @@
 }
 
 .modal_container {
-  width: 80%;
+  width: auto;
   margin: 15%;
   background-color: rgb(17, 18, 19);
   height: auto;
@@ -45,25 +44,21 @@
   margin-left: 1vw;
 }
 
-/* .modal_footer {
-  width: auto;
-  background-color: aliceblue;
-  border-radius: 5px;
-  text-align: right;
-  padding-right: 2%;
-  padding-bottom: 2%;
-} */
+.frame {
+  width: 100%;
+  height: 60vh;
+}
 
-/* .modal_btn {
-  background-color: rgb(9, 56, 61);
+.modal_btn {
+  background-color: rgb(226, 204, 0);
   width: 15%;
   height: 3vw;
-  border-radius: 5px;
-  color: aliceblue;
+  border-radius: 30px;
+  color: black;
   font-size: 2vw;
   cursor: pointer;
 }
 
 .modal_btn:active {
-  background-color: rgb(9, 103, 114);
-} */
+  background-color: rgba(226, 203, 0, 0.596);
+}
