--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -12,7 +12,7 @@
 .searchbar {
   height: 90%;
   width: 200%;
-  border-radius: 20px;
+  border-radius: 50px;
   background-color: transparent;
   font-size: 2vw;
   padding-left: 5px;
@@ -27,13 +27,12 @@
   text-align: center;
   cursor: pointer;
   background: #f8faff;
-  border-radius: 20px;
+  border-radius: 50px;
   border: none;
   padding: 5% 10%;
   background-color: rgb(194, 194, 0);
   user-select: none;
   margin-left: 120%;
-  margin-top: 0;
 }
 
 .btn_search:active {
@@ -47,8 +46,17 @@
 @media (max-width: 768px) {
   .btn_search {
     padding: 15% 20%;
-    font-size: 2.5vw;
-    margin-left: 15%;
+    font-size: 2vw;
+    margin-left: 60%;
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .btn_search {
+    padding: 10% 15%;
+    font-size: 1.5vw;
+    margin-left: 100%;
     margin-top: 0;
   }
 }
