--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -87,3 +87,21 @@
     font-size: 2vw;
   }
 }
+
+@media (min-width: 769px) and (max-width: 1200px) {
+  .card:hover .overview {
+    font-size: 2vw;
+  }
+  .card_button {
+    font-size: 2vw;
+  }
+
+  .card_header {
+    height: 4vh;
+    font-size: 3vw;
+    margin: 2%;
+  }
+  .card_header p {
+    font-size: 1.5vw;
+  }
+}
