--- a/src/components/Movies.module.css
+++ b/src/components/Movies.module.css
@@ -6,8 +6,14 @@
   column-gap: 2%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .card_container {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 801px) and (max-width: 1300px) {
+  .card_container {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
