--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -16,11 +16,7 @@
   font-size: 1.5vw;
   padding-top: 10%;
   display: grid;
-  grid-template-columns: 5fr 1fr;
-}
-
-.card_header p {
-  font-size: 1vw;
+  grid-template-columns: 1fr;
 }
 
 .card_body {
@@ -70,7 +66,7 @@
   box-shadow: 10px 10px 25px black;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .card:hover .overview {
     font-size: 2.5vw;
   }
@@ -83,12 +79,9 @@
     font-size: 3vw;
     margin: 2%;
   }
-  .card_header p {
-    font-size: 2vw;
-  }
 }
 
-@media (min-width: 769px) and (max-width: 1200px) {
+@media (min-width: 801px) and (max-width: 1400px) {
   .card:hover .overview {
     font-size: 2vw;
   }
@@ -100,8 +93,5 @@
     height: 4vh;
     font-size: 3vw;
     margin: 2%;
-  }
-  .card_header p {
-    font-size: 1.5vw;
   }
 }
