--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -12,15 +12,15 @@ img {
   position: relative;
 }
 
-.display {
+.horizontal_wrapper {
   position: absolute;
-  width: 80%;
-  height: 75%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin-top: 20%;
-  margin-left: 10%;
+  width: 120%;
+  height: 200%;
+  margin-top: -60%;
+  margin-left: -130%;
   background-color: transparent;
-  overflow: auto;
-  grid-gap: 5em;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transform: rotate(-90deg);
+  transform-origin: right top;
 }
