--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -10,13 +10,13 @@
 }
 
 .searchbar {
-  height: 90%;
+  height: auto;
   width: 200%;
   border-radius: 50px;
   background-color: transparent;
   font-size: 2vw;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   color: yellow;
   border: 2px solid yellow;
 }
@@ -41,6 +41,14 @@
   border: 2px solid black;
   box-shadow: 0 2px 25px aliceblue;
   background-color: rgb(255, 230, 0);
+}
+
+.suggest {
+  width: auto;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  font-size: 2vw;
 }
 
 @media (max-width: 768px) {
