--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,19 @@
+.main {
+  margin: 0;
+  padding: 0;
+}
+
 .wrapper {
   width: 100%;
-  height: auto;
+  height: 100vh;
+}
+
+.main.light {
+  background-color: rgb(196, 211, 224);
+  color: #000;
+}
+
+.main.dark {
+  background-color: rgb(15, 15, 15);
+  color: rgb(226, 204, 0);
 }
