--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,18 +2,15 @@
   width: 100%;
   height: 5vh;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   background-color: transparent;
   z-index: 1;
   position: relative;
-  color: aliceblue;
   margin-left: 2%;
-  color: rgb(255, 230, 0);
 }
 
 .logo,
 .search {
-  text-align: left;
   align-items: center;
   margin-top: 4%;
 }
