Added Searchbar & Migrated to Redux State Management

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,10 +9,10 @@
   margin-left: 2%;
 }
 
-.logo,
 .search {
   align-items: center;
-  margin-top: 4%;
+  margin-top: 2%;
+  text-align: center;
 }
 
 .logo h1 {
