--- a/src/components/Autocomplete/Autocomplete.module.css
+++ b/src/components/Autocomplete/Autocomplete.module.css
@@ -3,26 +3,29 @@
   z-index: 1;
   margin-left: 4%;
   width: auto;
-  height: auto;
+  height: 50%;
+  overflow-x: scroll;
 }
 
-.autocomplete.no_display {
-  display: none;
+.autocomplete:hover {
 }
 
 .autocomplete.dark,
 .suggestions.dark {
   color: aliceblue;
-  border: 1px solid aliceblue;
+  border: 1px solid rgb(79, 82, 85);
+  background-color: rgb(15, 15, 15);
 }
 
 .autocomplete.light,
 .suggestions.light {
   color: black;
   border: 1px solid black;
+  background-color: rgb(196, 211, 224);
 }
 .suggestions {
   text-align: left;
   font-size: 1.5vw;
   cursor: pointer;
+  padding: 2%;
 }
