--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -29,9 +29,10 @@
   font-style: italic;
 }
 
-img {
+.img {
   max-width: 100%;
   height: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 10);
 }
 
 .overview {
