--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,5 +1,4 @@
 .nav_container {
-  border: 1px solid yellow;
   margin-top: 2%;
 }
 
@@ -10,6 +9,21 @@
   font-weight: 600;
   cursor: pointer;
   user-select: none;
+  text-decoration: none;
+}
+.nav_links:active,
+.nav_links:hover,
+.nav_links:link,
+.nav_links:visited {
+  text-decoration: none;
+}
+
+.nav_links.light {
+  color: #000;
+}
+
+.nav_links.dark {
+  color: rgb(226, 204, 0);
 }
 
 .nav_container li:active {
