--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -3,11 +3,10 @@
 }
 
 .nav_container li {
-  display: inline;
-  margin-left: 10%;
+  display: inline-block;
+  padding: 0 5%;
   font-size: 1.5vw;
   font-weight: 600;
-  cursor: pointer;
   user-select: none;
   text-decoration: none;
 }
@@ -16,6 +15,7 @@
 .nav_links:link,
 .nav_links:visited {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .nav_links.light {
