--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -2,6 +2,7 @@
   width: 80%;
   height: auto;
   margin-left: 10%;
+  margin-top: 5%;
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-gap: 4%;
