--- a/src/components/Movies/TrendingMovies.module.css
+++ b/src/components/Movies/TrendingMovies.module.css
@@ -26,7 +26,7 @@
   height: auto;
   padding: 15px 10px;
   text-align: left;
-  font-size: 17px;
+  font-size: 1vw;
   color: #fff;
   transform: rotate(90deg);
   transform-origin: 0 100px;
