--- a/src/UI/Input/Input.module.css
+++ b/src/UI/Input/Input.module.css
@@ -1,6 +1,6 @@
-.movie_input {
+.text_input {
   width: 70%;
-  padding: 1%;
+  padding: 2%;
   border-radius: 20px;
   font-size: 1.5vw;
   cursor: pointer;
