--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
 }
+
 body {
-  margin: 0;
   font-family: "Titillium Web", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -16,7 +16,7 @@ code {
 }
 
 ::-webkit-scrollbar {
-  background: transparent; /* Optional: just make scrollbar invisible */
+  background: auto; /* scrollbar invisible */
 }
 
 li {
