--- a/src/UI/Input/Input.module.css
+++ b/src/UI/Input/Input.module.css
@@ -1,6 +1,7 @@
 .text_input {
-  width: 70%;
+  width: auto;
   padding: 2%;
+  padding-left: 5%;
   border-radius: 20px;
   font-size: 1.5vw;
   cursor: pointer;
