--- a/src/UI/Input/Input.module.css
+++ b/src/UI/Input/Input.module.css
@@ -1,7 +1,7 @@
 .text_input {
-  width: auto;
+  width: 100%;
   padding: 2%;
-  padding-left: 5%;
+  padding-left: 3%;
   border-radius: 20px;
   font-size: 1.5vw;
   cursor: pointer;
