--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 5vh;
   display: grid;
-  grid-template-columns: 1fr 2fr 1.5fr 0.5fr 1fr;
+  grid-template-columns: 1fr 2fr 1.5fr 1fr 1fr;
   z-index: 1;
   position: fixed;
   padding: 1%;
@@ -35,6 +35,8 @@
 }
 
 .login {
-  padding-top: 5%;
+  padding-top: 2%;
   text-align: right;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
