Added Login & Signup Pages

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1.5fr 1fr 1fr;
   z-index: 1;
-  position: fixed;
+  position: inherit;
   padding: 1%;
 }
 
