--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -22,3 +22,17 @@
 .header h1 {
   font-size: 2.5vw;
 }
+
+@media (max-width: 768px) {
+  .player_container {
+    width: 60%;
+    height: 25vh;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  .player_container {
+    width: 60%;
+    height: 40vh;
+  }
+}
