--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  padding-bottom: 10%;
+}
+
 .player_container {
   width: 60%;
   height: 65vh;
@@ -25,14 +29,18 @@
 
 @media (max-width: 768px) {
   .player_container {
-    width: 60%;
-    height: 25vh;
+    width: 70%;
+    height: 35vh;
+    margin-left: 15%;
+    margin-bottom: 50%;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
   .player_container {
     width: 60%;
-    height: 40vh;
+    height: 50vh;
+    margin-left: 20%;
+    margin-bottom: 50%;
   }
 }
