--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 5vh;
   display: grid;
-  grid-template-columns: 1fr 2fr 1.5fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1.5fr;
   z-index: 1;
   position: inherit;
   padding: 1%;
@@ -34,9 +34,9 @@
   zoom: 90%;
 }
 
-.login {
-  padding-top: 2%;
-  text-align: right;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+@media (max-width: 768px) {
+  .logo h1 {
+    margin-top: 2%;
+    font-size: 6vw;
+  }
 }
