--- a/src/components/Player/Player.module.css
+++ b/src/components/Player/Player.module.css
@@ -19,12 +19,18 @@
   display: grid;
   grid-template-columns: 1fr;
   width: 70%;
+  margin-top: 3%;
   margin-left: 20%;
   margin-bottom: 1%;
 }
 
 .header h1 {
   font-size: 2.5vw;
+}
+
+.back {
+  margin-left: 45%;
+  margin-top: 2%;
 }
 
 @media (max-width: 768px) {
@@ -39,6 +45,12 @@
     font-size: 5.5vw;
     margin-left: -20%;
   }
+
+  .back {
+    margin-top: -90%;
+    margin-left: 40%;
+    padding-bottom: 40%;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
@@ -47,5 +59,11 @@
     height: 50vh;
     margin-left: 20%;
     margin-bottom: 50%;
+  }
+
+  .back {
+    margin-top: -45%;
+    margin-left: 45%;
+    padding-bottom: 2%;
   }
 }
