--- a/src/components/Trendingmovies/TrendingMovies.module.css
+++ b/src/components/Trendingmovies/TrendingMovies.module.css
@@ -50,6 +50,13 @@
   .container {
     grid-template-columns: 1fr 1fr;
   }
+  .overview p {
+    font-size: 2.5vw;
+  }
+
+  .overview h4 {
+    font-size: 3vw;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
